fixed Jtest I think...